--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,1 +1,19 @@
 /.metadata/
+*.iml
+*.ipr
+*.iws
+*.log
+*.versionsBackup
+*.swp
+.ideas
+.idea
+.DS_Store
+.attach
+*.hprof
+/target
+/*/target
+/trace.db
+.jhw-cache
+dependency-reduced-pom.xml
+.settings/org.eclipse.core.resources.prefs
+*.prefs
