--- a/Backend/camaraoltda/Dockerfile
+++ b/Backend/camaraoltda/Dockerfile
@@ -6,6 +6,6 @@ COPY pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean package
 
 FROM openjdk:8
-COPY --from=build /usr/src/app/target/camaraoltda.jar /usr/app/camaraoltda.jar 
+COPY --from=build /usr/src/app/target/camaraoltda-0.0.1-SNAPSHOT.jar /usr/app/camaraoltda.jar 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/usr/app/camaraoltda.jar"]
