--- a/Backend/camaraoltda/Dockerfile
+++ b/Backend/camaraoltda/Dockerfile
@@ -8,4 +8,4 @@ RUN mvn -f /usr/src/app/pom.xml clean package
 FROM openjdk:8
 COPY --from=build /usr/src/app/target/camaraoltda-0.0.1-SNAPSHOT.jar /usr/app/camaraoltda.jar 
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/usr/app/camaraoltda.jar"]
+CMD ["java","-jar","/usr/app/camaraoltda.jar"]
