--- a/Backend/camaraoltda/src/main/resources/application.properties
+++ b/Backend/camaraoltda/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=senha123
 spring.datasource.url=jdbc:postgresql://localhost:5432/camaraoltda
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
