--- a/Backend/camaraoltda/Dockerfile
+++ b/Backend/camaraoltda/Dockerfile
@@ -1,8 +1,8 @@
 # FROM maven:3.5.2-jdk-9 AS build
 FROM maven:3-openjdk-8 AS build
 
-COPY src /usr/src/app/src
-COPY pom.xml /usr/src/app
+COPY ./src /usr/src/app/src
+COPY ./pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean package
 
 FROM openjdk:8
