--- a/Backend/camaraoltda/pom.xml
+++ b/Backend/camaraoltda/pom.xml
@@ -23,28 +23,28 @@
   </parent>
   
    <dependencies>
-    	<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger2</artifactId>
-		    <version>2.7.0</version>
-		    <exclusions>
-			    <exclusion>
-			      <groupId>org.springframework.plugin</groupId>
-    			  <artifactId>spring-plugin-core</artifactId>
-			    </exclusion>
-			 </exclusions>
-		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>2.7.0</version>
-		    <exclusions>
-			    <exclusion>
-			      <groupId>org.springframework.plugin</groupId>
-    			  <artifactId>spring-plugin-core</artifactId>
-			    </exclusion>
-			 </exclusions>
-		</dependency>
+<!--     	<dependency> -->
+<!-- 		    <groupId>io.springfox</groupId> -->
+<!-- 		    <artifactId>springfox-swagger2</artifactId> -->
+<!-- 		    <version>2.7.0</version> -->
+<!-- 		    <exclusions> -->
+<!-- 			    <exclusion> -->
+<!-- 			      <groupId>org.springframework.plugin</groupId> -->
+<!--     			  <artifactId>spring-plugin-core</artifactId> -->
+<!-- 			    </exclusion> -->
+<!-- 			 </exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>io.springfox</groupId> -->
+<!-- 		    <artifactId>springfox-swagger-ui</artifactId> -->
+<!-- 		    <version>2.7.0</version> -->
+<!-- 		    <exclusions> -->
+<!-- 			    <exclusion> -->
+<!-- 			      <groupId>org.springframework.plugin</groupId> -->
+<!--     			  <artifactId>spring-plugin-core</artifactId> -->
+<!-- 			    </exclusion> -->
+<!-- 			 </exclusions> -->
+<!-- 		</dependency> -->
     	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -119,6 +119,17 @@
 		<dependency>
 		    <groupId>org.apache.solr</groupId>
 		    <artifactId>solr-solrj</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.5.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.5.2</version>
 		</dependency>
 		
 	</dependencies>
