--- a/Backend/camaraoltda/src/main/resources/application.properties
+++ b/Backend/camaraoltda/src/main/resources/application.properties
@@ -5,13 +5,13 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_SOURCE}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=${DATABASE_SOURCE}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 
-#spring.datasource.username=postgres
-#spring.datasource.password=senha123
-#spring.datasource.url=jdbc:postgresql://localhost:5432/camaraoltda
+spring.datasource.username=postgres
+spring.datasource.password=senha123
+spring.datasource.url=jdbc:postgresql://localhost:5432/camaraoltda
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=none
@@ -19,3 +19,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.data.rest.base-path=/api
+server.servlet.context-path=/camaraoltda
+
+security.oauth2.client.registration.google.client-id=814563106968-8fqjehu1ajcn9dfho9d9i2nfqpnpg76h.apps.googleusercontent.com
+security.oauth2.client.registration.google.client-secret=J2XPOP0U2GxLFsueY6lVsKK9
