--- a/Backend/camaraoltda/pom.xml
+++ b/Backend/camaraoltda/pom.xml
@@ -23,29 +23,42 @@
   </parent>
   
    <dependencies>
-<!--     	<dependency> -->
-<!-- 		    <groupId>io.springfox</groupId> -->
-<!-- 		    <artifactId>springfox-swagger2</artifactId> -->
-<!-- 		    <version>2.7.0</version> -->
-<!-- 		    <exclusions> -->
-<!-- 			    <exclusion> -->
-<!-- 			      <groupId>org.springframework.plugin</groupId> -->
-<!--     			  <artifactId>spring-plugin-core</artifactId> -->
-<!-- 			    </exclusion> -->
-<!-- 			 </exclusions> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 		    <groupId>io.springfox</groupId> -->
-<!-- 		    <artifactId>springfox-swagger-ui</artifactId> -->
-<!-- 		    <version>2.7.0</version> -->
-<!-- 		    <exclusions> -->
-<!-- 			    <exclusion> -->
-<!-- 			      <groupId>org.springframework.plugin</groupId> -->
-<!--     			  <artifactId>spring-plugin-core</artifactId> -->
-<!-- 			    </exclusion> -->
-<!-- 			 </exclusions> -->
-<!-- 		</dependency> -->
-    	<dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>18.0</version>
+		</dependency>
+		
+		<dependency>
+	       <groupId>javax.servlet</groupId>
+	       <artifactId>javax.servlet-api</artifactId>
+	    </dependency>
+		<dependency>
+		    <groupId>com.google.api-client</groupId>
+		    <artifactId>google-api-client-appengine</artifactId>
+		    <version>1.31.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.api-client</groupId>
+		    <artifactId>google-api-client-extensions</artifactId>
+		    <version>1.6.0-beta</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.http-client</groupId>
+		    <artifactId>google-http-client-jackson2</artifactId>
+		    <version>1.36.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.api-client</groupId>
+		    <artifactId>google-api-client-jackson2</artifactId>
+		    <version>1.20.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.api-client</groupId>
+		    <artifactId>google-api-client</artifactId>
+		    <version>1.31.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -67,17 +80,6 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.hibernate</groupId> -->
-<!--             <artifactId>hibernate-validator</artifactId> -->
-<!--             <version>4.3.0.Final</version> -->
-<!--         </dependency> -->
-		
-		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
-<!-- 		<dependency> -->
-<!-- 		    <groupId>com.h2database</groupId> -->
-<!-- 		    <artifactId>h2</artifactId> -->
-<!-- 		</dependency> -->
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
