--- a/Backend/camaraoltda/src/main/resources/application.properties
+++ b/Backend/camaraoltda/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.jpa.show-sql=true
 
 spring.data.rest.base-path=/api
 server.servlet.context-path=/camaraoltda
+springdoc.api-docs.path=/api-docs
 
 security.oauth2.client.registration.google.client-id=814563106968-8fqjehu1ajcn9dfho9d9i2nfqpnpg76h.apps.googleusercontent.com
 security.oauth2.client.registration.google.client-secret=J2XPOP0U2GxLFsueY6lVsKK9
